--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_native_splash: ^2.4.2
+  flutter_native_splash: ^2.3.5
   flutter_launcher_icons: ^0.14.1
   persistent_bottom_nav_bar: ^6.2.1
+  awesome_dialog: ^3.2.1
+  loading_overlay_pro: ^2.1.1
+  http: ^1.3.0
+  image_picker: ^1.1.2
+  google_maps_flutter: ^2.10.1
+  geolocator: ^14.0.0
+  permission_handler: ^12.0.0+1
+  geocoding: ^3.0.0
+  shared_preferences: ^2.5.3
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
+  flutter_sound: ^9.28.0
+
 
 dev_dependencies:
   flutter_test:
